# Cargo-Transportation

./: .dockerignore  .env.prod  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: app.sh  celery.sh
loading_default_data/: upload_data.py
migrations/: env.py
migrations/versions/: 7a8e25ca3d97_db_creation.py
src/: celery.py  config.py  database.py  main.py
src/transportation/: models.py  router.py  schemas.py  tasks.py  utils.py
